update: README.md & launch config